# wh-1

./: .gitignore  README.md  get-images.py  pyproject.toml
alembic/: env.py
alembic/versions/: c33216db156f_migrate.py
app/: crud.py  db.py  main.py  models.py  schemas.py
lib/: extractor.py  google_vision.py  save_image.py  uploader.py
