[tool.poetry]
name = "wishlink-hackathon-jul-24"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
fiftyone = "^0.24.1"
pytube = "^15.0.0"
torch = "^2.3.1"
torchvision = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
